Fix arrow flickering
Replace react-xarrows with react-archer which apparently
plays nicer with responsive elements

--- a/src/tree/Tree.css
+++ b/src/tree/Tree.css
@@ -1,4 +1,4 @@
-.arrow-container {
+.archer-container g {
     animation: fadeInAnimation 1s;
 }
 
